# sailing_opencpn

./: README.md
garmin_app/: manifest.xml  monkey.jungle
garmin_app/resources/layouts/: layout.xml
garmin_app/resources/strings/: strings.xml
garmin_app/source/: SailingApp.mc  SailingDelegate.mc  SailingModel.mc  SailingView.mc
opencpn_plugin/: CMakeLists.txt  README.md  sailing_pi.cpp  sailing_pi.h
